Prevents menu overflow in mobile version

--- a/app/assets/stylesheets/new_header.scss
+++ b/app/assets/stylesheets/new_header.scss
@@ -5,3 +5,13 @@
     filter: none;
   }
 }
+
+.fr-header__menu.fr-modal {
+  // Avoid overflow on mobile version
+  // Due to button width
+  overflow-x: hidden;
+
+  .fr-btn {
+    width: auto;
+  }
+}
